# Constructor-TECH-project

./: README.md
ros2_ws/: Dockerfile  test.txt
ros2_ws/bags/install/: local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/bags/log/: latest_build
ros2_ws/bags/rosbag2_2025_05_03-22_15_34/: metadata.yaml  rosbag2_2025_05_03-22_15_34_0.db3
ros2_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/custom_msg_pkg/lib/: libcustom_msg_pkg__rosidl_generator_py.dylib  libcustom_msg_pkg__rosidl_typesupport_c.dylib  libcustom_msg_pkg__rosidl_typesupport_cpp.dylib  libcustom_msg_pkg__rosidl_typesupport_fastrtps_c.dylib  libcustom_msg_pkg__rosidl_typesupport_introspection_c.dylib  libcustom_msg_pkg__rosidl_typesupport_introspection_cpp.dylib
ros2_ws/install/custom_msg_pkg/share/custom_msg_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/text_publisher/lib/text_publisher/: publisher_node
ros2_ws/install/text_publisher/share/text_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/text_subscriber/lib/text_subscriber/: subscriber_node
ros2_ws/log/: latest_build
ros2_ws/src/custom_msg_pkg/: CMakeLists.txt
ros2_ws/src/custom_msg_pkg/msg/: TextStamped.msg
ros2_ws/src/text_publisher/: package.xml  setup.py
ros2_ws/src/text_subscriber/: CMakeLists.txt  package.xml
ros2_ws/src/text_subscriber/src/: subscriber_node.cpp
(+54 files in other folders)
