<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>text_subscriber</name>
  <version>0.0.0</version>
  <description>
  This is a **Subscribr** package. It contains a node that:
    - Subscribes to the `TextStamped` topic.
    - When a message is received:
    - Prints the received text.
    - Prints the timestamp included in the message.
    - Prints the current ROS time.
    - Calculates and prints the time difference between the timestamp and the current time (i.e., delivery delay).
</description>

  <maintainer email="cprljakovicbogdan@gmail.com">bogdancprljakovic</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>custom_msg_pkg</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
